[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tandem = { version = "0.3.0", git = "https://github.com/sine-fdn/tandem.git", commit = "71e0f4015568fafbceab05795e1d299dcdec6ec8" }
tandem_garble_interop = { version = "0.3.0", git = "https://github.com/sine-fdn/tandem.git", commit = "71e0f4015568fafbceab05795e1d299dcdec6ec8" }
